--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
   font-size: 16px;
   border-radius: 5px;
   background-color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .menu__add {
@@ -34,4 +36,26 @@
 
 .icon {
   margin-right: 5px;
+}
+
+.note-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.note-list__note {
+  margin: 40px 20px;
+  padding: 20px;
+  width: 240px;
+  background-color: rgb(255, 243, 0);
+  border: 1px solid black;
+}
+
+.note-list__header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
