--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
   display: flex;
 }
 
-.menu button {
+.menu button,
+.note-panel button {
   padding: 10px 20px;
   font-size: 16px;
   border-radius: 5px;
@@ -32,6 +33,10 @@
 
 .menu__add {
   margin-right: 20px;
+}
+
+.note-panel__save {
+  margin-right: 10px;
 }
 
 .icon {
@@ -58,4 +63,44 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+}
+
+.note-panel {
+  width: 600px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+  background-color: #fff;
+  border: 1px solid black;
+}
+
+.note-panel h2 {
+  font-size: 26px;
+}
+
+.note-panel label {
+  margin: 10px;
+  font-size: 18px;
+}
+
+.note-panel #category,
+.note-panel #textarea {
+  width: 100%;
+  max-width: 90%;
+  max-height: 400px;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.note-panel__error {
+  margin: 10px;
+  font-size: 18px;
+  color: red;
+  /* visibility: hidden; */
 }
