--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   padding: 20px 0;
@@ -102,5 +102,5 @@
   margin: 10px;
   font-size: 18px;
   color: red;
-  /* visibility: hidden; */
+  visibility: hidden;
 }
