--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@
   transition: background-color 0.3s, color 0.3s;
 }
 
+.menu button:hover,
+.note-panel button:hover {
+  background-color: #333;
+  color: #ddd;
+}
+
 .menu__add {
   margin-right: 20px;
 }
@@ -52,8 +58,7 @@
 }
 
 .note-list__note {
-  margin: 40px 20px;
-  padding: 20px;
+  margin: 10px 10px;
   width: 240px;
   background-color: rgb(255, 243, 0);
   border: 1px solid black;
@@ -62,12 +67,15 @@
 .note-list__header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.06);
+  font-size: 18px;
 }
 
 .note-list__body {
   font-size: 18px;
   word-break: break-word;
+  padding: 10px 20px;
 }
 
 .note-list__delete-note {
@@ -78,7 +86,7 @@
 }
 
 .note-panel {
-  width: 600px;
+  width: 400px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -89,15 +97,18 @@
   padding: 20px 0;
   background-color: #fff;
   border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 0 10px black;
 }
 
 .note-panel h2 {
   font-size: 26px;
+  text-transform: uppercase;
 }
 
 .note-panel label {
   margin: 10px;
-  font-size: 18px;
+  font-size: 22px;
 }
 
 .note-panel #category,
@@ -108,6 +119,7 @@
   padding: 10px;
   border-radius: 5px;
   text-align: center;
+  font-size: 16px;
 }
 
 .note-panel__error {
